--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,3 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.social-btn {
+    width: 150px;
+    border: 2px solid black;
+    padding: 10px;
+    margin: auto;
+    background: #fff;
+    text-align: center;
+}
