--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -6,6 +6,7 @@
 <div class="row">
   <div class="col-md-8">
     <p class="lead"><%= @topic.description %></p>
+    <h2>Amateur Posts</h2>
     <% @topic.posts.each do |post| %>
       <div class="media">
         <div class="media-body">
@@ -19,9 +20,23 @@
         </div>
       </div>
     <% end %>
+    <h2>$ponsored Posts</h2>
+    <% @topic.sponsored_posts.each do |sponsored| %>
+      <div class="media">
+        <div class="media-body">
+          <h4 class="media-heading">
+            <%= link_to sponsored.title, topic_sponsored_post_path(@topic, sponsored) %>
+          </h4>
+          <small>
+            submitted <%= time_ago_in_words(sponsored.created_at) %> ago <br>
+          </small>
+        </div>
+      </div>
+    <% end %>
   </div>
   <div class="col-md-4">
     <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
+    <%= link_to "New Sponsored Post", new_topic_sponsored_post_path(@topic), class: 'btn btn-success' %>
     <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } %>
   </div>
 </div>
