--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,15 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+
+.pic {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    inline: block;
+}
+
+/* add hover if link added later */
+.pic:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
