--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
         <li><%= link_to "About", about_path %></li>
         <% if current_user %>
            <li class="pull-right"><%= link_to "#{current_user.name} -Sign Out", session_path(current_user), method: :delete %></li>
-           <li class="pull-right"><%= image_tag avatar_url(current_user)%></li>
+           <li class="pull-right pic"><%= image_tag avatar_url(current_user)%></li>
         <% else %>
            <li class="pull-right"><%= link_to "Sign In", new_session_path %></li>
            <li class="pull-right"><%= link_to "Sign Up", new_user_path %></li>
